# algomon

./: .gitignore  .gitmodules  CMakeLists.txt  autogen.sh  log
app/: CMakeLists.txt  iex.cpp  main.cpp
config/: main.xml
domain/: Allocation.h  CMakeLists.txt  Enums.h  Event.cpp  Event.h  MarketData.cpp  MarketData.h  Quote.cpp  Quote.h  TradeMessage.cpp  TradeMessage.h
domain/inc/: Data.h  Enums.h  MarketData.h  Quote.h  TradeMessage.h
domain/src/: MarketData.cpp  Quote.cpp  TradeMessage.cpp
engine/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  EvalContext.cpp  EvalContext.h  Publisher.h  PublisherController.cpp  PublisherController.h  SessionImpl.cpp  SessionImpl.h  Strategy.cpp  Strategy.h  StrategyEngine.cpp  StrategyEngine.h  Subscriber.h  Task.h  ThreadPool.h  Threaded.cpp  Threaded.h  Worker.h
engine/inc/: Event.h  Publisher.h  Subscriber.h
engine/src/: Publisher.cpp
fix/: CMakeLists.txt  Myfix_classes.cpp  Myfix_classes.hpp  Myfix_router.hpp  Myfix_traits.cpp  Myfix_types.cpp  Myfix_types.hpp
iex_provider/: CMakeLists.txt  IEXProvider.cpp  IEXProvider.h
src/domain/: .MarketData.cpp.swp  .MarketData.h.swp  MarketData.cpp  MarketData.h  Quote.cpp  Quote.h
test/: CMakeLists.txt  FixServer.cpp  FixServer.h  TestEnvironment.cpp  TestEnvironment.h  main.cpp  myfix_client.xml  myfix_server.xml
utils/: .include.h.swp  CMakeLists.txt  cli_opts.h  include.h  include.hpp  logger.cpp  logger.h  logger.hpp
